updated the view
